[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ui/title.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/title_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/UI/TitleScreen.gd" type="Script" id=3]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -224.0
margin_top = -72.0
margin_right = -144.0
margin_bottom = -16.0
rect_min_size = Vector2( 80, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="Menu"]
margin_right = 80.0
margin_bottom = 16.0
focus_neighbour_top = NodePath("../Exit")
text = "新游戏"

[node name="Load" type="Button" parent="Menu"]
margin_top = 20.0
margin_right = 80.0
margin_bottom = 36.0
text = "读进度"

[node name="Exit" type="Button" parent="Menu"]
margin_top = 40.0
margin_right = 80.0
margin_bottom = 56.0
focus_neighbour_bottom = NodePath("../NewGame")
text = "退出"
[connection signal="pressed" from="Menu/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Menu/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_Exit_pressed"]
